css/queerassfolk.webflow.css
@font-face {
  font-family: Worksans;
  src: url('../fonts/WorkSans-Medium.woff2') format("woff2");
  font-weight: 500;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: Worksans;
  src: url('../fonts/WorkSans-SemiBold.woff2') format("woff2");
  font-weight: 600;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: Worksans;
  src: url('../fonts/WorkSans-Regular.woff2') format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: Anton;
  src: url('../fonts/Anton-Regular.woff2') format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: Egfolkfishtail Rough;
  src: url('../fonts/EGFolkFishtail-Rough.otf') format("opentype");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: Egfolkfishtail Roughoutline;
  src: url('../fonts/EGFolkFishtail-RoughOutline.otf') format("opentype");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

:root {
  --secondary: #ffe9cf;
  --primary: #270f03;
  --y-base: 6rem;
  --max-w: 1620px;
  --nav-height: 3rem;
  --rounded-1: .375rem;
  --white: #fef8f1;
  --events-text-height: 17vw;
  --green: #69e05f;
  --light: #d9d9d9;
  --rounded-xs: .2rem;
}

body {
  background-color: var(--secondary);
  color: var(--primary);
  letter-spacing: -.02em;
  font-family: Worksans, Arial, sans-serif;
  font-size: 14px;
  line-height: 1.2em;
}

label {
  margin-bottom: 5px;
  padding-left: 13px;
  font-weight: 400;
  display: block;
}

.main {
  min-height: 100svh;
}

.sec {
  padding-top: var(--y-base);
  padding-bottom: var(--y-base);
  flex-flow: column;
  justify-content: center;
  align-items: center;
  min-height: 40svh;
  display: flex;
  position: relative;
}

.sec.hero {
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100svh;
  min-height: 100svh;
  padding-top: 6rem;
  padding-bottom: 3rem;
  display: flex;
  overflow: clip;
}

.sec.scrolltrigger-sec {
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
  height: 100svh;
  padding-top: 0;
  padding-bottom: 0;
}

.sec.utlis {
  grid-column-gap: 3rem;
  grid-row-gap: 3rem;
}

.sec.reorganise {
  padding-top: calc(17vw + var(--y-base)  + 6rem);
  justify-content: flex-start;
  align-items: center;
  margin-top: calc(-17vw - 6rem);
}

.sec.footer {
  background-color: var(--primary);
  min-height: 101vh;
  padding-top: 7.25rem;
  padding-bottom: 3rem;
}

.sec.inertia {
  overflow: clip;
}

.sec.banner {
  margin-top: -200px;
}

.comp {
  max-width: var(--max-w);
  grid-column-gap: 1.5rem;
  grid-row-gap: 1.5rem;
  flex-flow: row;
  flex: none;
  justify-content: center;
  align-items: center;
  width: 94%;
  min-width: 20vw;
  display: flex;
  position: relative;
}

.comp.text-exp {
  grid-column-gap: 1.5rem;
  grid-row-gap: 1.5rem;
  flex-flow: wrap;
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-auto-columns: 1fr;
  width: 80%;
  margin-bottom: 0;
  padding-left: 0;
  display: grid;
}

.comp.slider-w {
  width: 100%;
  max-width: 100%;
  overflow: clip;
}

.comp.inertia {
  flex-flow: row;
  height: 60svh;
}

.comp.footer {
  grid-column-gap: 0rem;
  grid-row-gap: 0rem;
  color: var(--secondary);
  width: 80%;
  display: block;
}

.comp.toggle-w {
  z-index: 3;
  pointer-events: none;
  display: none;
  position: absolute;
  top: auto;
  bottom: 2%;
}

.comp.scroller {
  grid-column-gap: 0rem;
  grid-row-gap: 0rem;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  max-width: 100%;
  font-family: Egfolkfishtail Rough, Arial, sans-serif;
  font-size: 20vw;
  line-height: 1em;
  overflow: visible;
}

.comp.footer-logo {
  color: var(--secondary);
  width: 99%;
  min-height: 20svh;
  margin-top: 2rem;
}

.comp.video {
  max-width: 100%;
}

.comp.about {
  grid-column-gap: 0rem;
  grid-row-gap: 0rem;
  color: var(--primary);
  width: 80%;
  display: block;
}

.comp._2 {
  flex-flow: column;
  width: 100%;
  padding-left: 35px;
  padding-right: 35px;
}

.scroll-wrapper {
  overflow: clip;
}

.nav-w {
  z-index: 20;
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  pointer-events: none;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  display: flex;
  position: fixed;
  inset: 0% 0% auto;
}

.nav {
  grid-column-gap: 1.5rem;
  grid-row-gap: 1.5rem;
  pointer-events: auto;
  justify-content: center;
  align-items: center;
  height: 100%;
  padding-top: 1.25rem;
  display: flex;
}

.svg.gsap-logo {
  aspect-ratio: 44 / 16;
  width: 2.75em;
  height: 1em;
}

.svg._wf-logo {
  aspect-ratio: 100 / 16;
  width: 6.25em;
  height: 1em;
}

.svg.arrow-r {
  width: 2em;
  height: 1em;
}

.svg.copy-icon {
  width: 1rem;
  height: 1rem;
}

.svg.arrow:where(.w-variant-352da3df-a236-ccac-dbb8-8845a582a471) {
  transform: rotate(180deg);
}

.svg.arrow.flip-2 {
  transform: rotate(180deg);
}

.svg.arrow {
  width: 2em;
}

.svg.arrow.flip-4 {
  transform: rotate(180deg);
}

.logo-banner-w {
  grid-column-gap: .4rem;
  grid-row-gap: .4rem;
  font-size: 20px;
  display: flex;
}

.logo-banner-w.white {
  color: var(--secondary);
  font-size: 20px;
}

.sub-nav-w {
  grid-column-gap: 0rem;
  grid-row-gap: 0rem;
  pointer-events: auto;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 0;
  font-size: 12px;
  display: flex;
}

.link-li-w {
  opacity: .7;
  pointer-events: auto;
  text-transform: none;
  cursor: pointer;
  padding: .2rem .6rem;
  transition: opacity .2s;
  position: relative;
}

.link-li-w:hover, .link-li-w.current {
  opacity: 1;
}

.link-li-w.footer {
  color: var(--secondary);
  text-transform: capitalize;
  text-decoration: none;
}

.x-adjust-right {
  padding-right: .2rem;
  font-family: Egfolkfishtail Rough, Arial, sans-serif;
}
/* ... */

